# Sandbox

./: .clang-format  .gitignore  CMakeLists.txt  conanfile.txt
src/SandboxEngine/: CMakeLists.txt
src/SandboxEngine/Application/: Application.cpp  Application.hpp  ContextManager.cpp  ContextManager.hpp  Window.cpp  Window.hpp  WindowDefinition.hpp
src/SandboxEngine/Debug/: Assertion.hpp  DebugBreak.hpp  LogManager.cpp  LogManager.hpp
src/SandboxEngine/Misc/: Clock.cpp  Clock.hpp  Tokenize.hpp
src/SandboxEngine/Serialization/: Serializer.cpp  Serializer.hpp  SerializerEntry.cpp  SerializerEntry.hpp
src/SandboxGame/: CMakeLists.txt  Main.cpp
